# llms-from-scratch

./: .gitignore  .pre-commit-config.yaml  data.py  main.py  pyproject.toml
src/: data.py  embedding.py
tests/: The_Verdict.txt  conftest.py  test_data.py  test_embedding.py  test_tokenizer.py
